src/Skia/Bindings/Sk_imagefilter.hs

{-# LANGUAGE DeriveAnyClass #-}
{-# LANGUAGE DeriveFoldable #-}
{-# LANGUAGE DeriveFunctor #-}
{-# LANGUAGE DeriveGeneric #-}
{-# LANGUAGE DeriveTraversable #-}
{-# LANGUAGE DerivingStrategies #-}
{-# LANGUAGE DerivingVia #-}
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE EmptyCase #-}
{-# LANGUAGE ExplicitForAll #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}
{-# LANGUAGE NamedFieldPuns #-}
{-# LANGUAGE OverloadedLabels #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE OverloadedStrings #-}
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ScopedTypeVariables #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- | This is an auto-generated FFI binding module.
module Skia.Bindings.Sk_imagefilter where

import Foreign
import Foreign.C
import Foreign.Storable
import Foreign.Storable.Offset

import Skia.Bindings.Types


{- | C function signature:

@
void sk_imagefilter_unref(sk_imagefilter_t *cfilter)
@
-}
foreign import ccall "sk_imagefilter_unref" sk_imagefilter_unref ::
  Ptr (Sk_imagefilter) -- ^ C argument @"sk_imagefilter_t * cfilter"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_imagefilter_unref'
foreign import ccall "&sk_imagefilter_unref" p'sk_imagefilter_unref ::
  FunPtr (Ptr (Sk_imagefilter) -> IO (()))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_arithmetic(float k1, float k2, float k3, float k4, _Bool enforcePMColor, const sk_imagefilter_t *background, const sk_imagefilter_t *foreground, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_arithmetic" sk_imagefilter_new_arithmetic ::
  CFloat -- ^ C argument @"float k1"@
  -> CFloat -- ^ C argument @"float k2"@
  -> CFloat -- ^ C argument @"float k3"@
  -> CFloat -- ^ C argument @"float k4"@
  -> CBool -- ^ C argument @"_Bool enforcePMColor"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * background"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * foreground"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_arithmetic'
foreign import ccall "&sk_imagefilter_new_arithmetic" p'sk_imagefilter_new_arithmetic ::
  FunPtr (CFloat -> CFloat -> CFloat -> CFloat -> CBool -> Ptr (Sk_imagefilter) -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_blend(sk_blendmode_t mode, const sk_imagefilter_t *background, const sk_imagefilter_t *foreground, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_blend" sk_imagefilter_new_blend ::
  Sk_blendmode -- ^ C argument @"sk_blendmode_t mode"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * background"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * foreground"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_blend'
foreign import ccall "&sk_imagefilter_new_blend" p'sk_imagefilter_new_blend ::
  FunPtr (Sk_blendmode -> Ptr (Sk_imagefilter) -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_blender(sk_blender_t *blender, const sk_imagefilter_t *background, const sk_imagefilter_t *foreground, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_blender" sk_imagefilter_new_blender ::
  Ptr (Sk_blender) -- ^ C argument @"sk_blender_t * blender"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * background"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * foreground"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_blender'
foreign import ccall "&sk_imagefilter_new_blender" p'sk_imagefilter_new_blender ::
  FunPtr (Ptr (Sk_blender) -> Ptr (Sk_imagefilter) -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_blur(float sigmaX, float sigmaY, sk_shader_tilemode_t tileMode, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_blur" sk_imagefilter_new_blur ::
  CFloat -- ^ C argument @"float sigmaX"@
  -> CFloat -- ^ C argument @"float sigmaY"@
  -> Sk_shader_tilemode -- ^ C argument @"sk_shader_tilemode_t tileMode"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_blur'
foreign import ccall "&sk_imagefilter_new_blur" p'sk_imagefilter_new_blur ::
  FunPtr (CFloat -> CFloat -> Sk_shader_tilemode -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_color_filter(sk_colorfilter_t *cf, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_color_filter" sk_imagefilter_new_color_filter ::
  Ptr (Sk_colorfilter) -- ^ C argument @"sk_colorfilter_t * cf"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_color_filter'
foreign import ccall "&sk_imagefilter_new_color_filter" p'sk_imagefilter_new_color_filter ::
  FunPtr (Ptr (Sk_colorfilter) -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_compose(const sk_imagefilter_t *outer, const sk_imagefilter_t *inner)
@
-}
foreign import ccall "sk_imagefilter_new_compose" sk_imagefilter_new_compose ::
  Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * outer"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * inner"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_compose'
foreign import ccall "&sk_imagefilter_new_compose" p'sk_imagefilter_new_compose ::
  FunPtr (Ptr (Sk_imagefilter) -> Ptr (Sk_imagefilter) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_displacement_map_effect(sk_color_channel_t xChannelSelector, sk_color_channel_t yChannelSelector, float scale, const sk_imagefilter_t *displacement, const sk_imagefilter_t *color, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_displacement_map_effect" sk_imagefilter_new_displacement_map_effect ::
  Sk_color_channel -- ^ C argument @"sk_color_channel_t xChannelSelector"@
  -> Sk_color_channel -- ^ C argument @"sk_color_channel_t yChannelSelector"@
  -> CFloat -- ^ C argument @"float scale"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * displacement"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * color"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_displacement_map_effect'
foreign import ccall "&sk_imagefilter_new_displacement_map_effect" p'sk_imagefilter_new_displacement_map_effect ::
  FunPtr (Sk_color_channel -> Sk_color_channel -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_drop_shadow(float dx, float dy, float sigmaX, float sigmaY, sk_color_t color, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_drop_shadow" sk_imagefilter_new_drop_shadow ::
  CFloat -- ^ C argument @"float dx"@
  -> CFloat -- ^ C argument @"float dy"@
  -> CFloat -- ^ C argument @"float sigmaX"@
  -> CFloat -- ^ C argument @"float sigmaY"@
  -> Sk_color -- ^ C argument @"sk_color_t color"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_drop_shadow'
foreign import ccall "&sk_imagefilter_new_drop_shadow" p'sk_imagefilter_new_drop_shadow ::
  FunPtr (CFloat -> CFloat -> CFloat -> CFloat -> Sk_color -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_drop_shadow_only(float dx, float dy, float sigmaX, float sigmaY, sk_color_t color, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_drop_shadow_only" sk_imagefilter_new_drop_shadow_only ::
  CFloat -- ^ C argument @"float dx"@
  -> CFloat -- ^ C argument @"float dy"@
  -> CFloat -- ^ C argument @"float sigmaX"@
  -> CFloat -- ^ C argument @"float sigmaY"@
  -> Sk_color -- ^ C argument @"sk_color_t color"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_drop_shadow_only'
foreign import ccall "&sk_imagefilter_new_drop_shadow_only" p'sk_imagefilter_new_drop_shadow_only ::
  FunPtr (CFloat -> CFloat -> CFloat -> CFloat -> Sk_color -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_image(sk_image_t *image, const sk_rect_t *srcRect, const sk_rect_t *dstRect, const sk_sampling_options_t *sampling)
@
-}
foreign import ccall "sk_imagefilter_new_image" sk_imagefilter_new_image ::
  Ptr (Sk_image) -- ^ C argument @"sk_image_t * image"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * srcRect"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * dstRect"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_image'
foreign import ccall "&sk_imagefilter_new_image" p'sk_imagefilter_new_image ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_rect) -> Ptr (Sk_rect) -> Ptr (Sk_sampling_options) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_image_simple(sk_image_t *image, const sk_sampling_options_t *sampling)
@
-}
foreign import ccall "sk_imagefilter_new_image_simple" sk_imagefilter_new_image_simple ::
  Ptr (Sk_image) -- ^ C argument @"sk_image_t * image"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_image_simple'
foreign import ccall "&sk_imagefilter_new_image_simple" p'sk_imagefilter_new_image_simple ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_sampling_options) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:
